<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/speak"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_menu_play_clip"
        android:focusable="true"
        android:gravity="center_vertical"
        android:scaleType="center"
        android:textColor="#99ffffff"
        android:contentDescription="@string/menu_play"
        android:text="@string/play_allcaps"
        android:paddingRight="6dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <ImageView
        android:id="@+id/language"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/menu_language"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_menu_language" />

    <ImageView
        android:id="@+id/prefs"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/menu_properties"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_menu_preferences" />

    <ImageView
        android:id="@+id/write"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/menu_save"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_menu_save" />

    <ImageView
        android:id="@+id/clear"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/menu_clear"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_menu_delete" />

    <ImageView
        android:id="@+id/library"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/menu_library"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_menu_archive" />

</LinearLayout>