<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/stop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/stop"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_media_stop" />

    <ImageView
        android:id="@+id/pause"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/pause"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_media_pause" />

    <ImageView
        android:id="@+id/resume"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/resume"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_media_play"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/rewind"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/rewind"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_media_rew" />

    <ImageView
        android:id="@+id/fast_forward"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/state_selector_background"
        android:clickable="true"
        android:contentDescription="@string/fast_forward"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_media_ff" />

</LinearLayout>