<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/save_file_message"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="#22FFFFFF"
        android:hint="@string/input_hint"
        android:padding="4dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="#cccccc"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_save"
            style="@style/dark_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm_save"
            style="@style/blue_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="4dp"
            android:layout_weight="0.5"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>