<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/delete"
        style="@style/dark_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/menu_delete"
        android:src="@drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/ringtone"
        style="@style/dark_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/menu_ringtone"
        android:src="@drawable/ic_menu_ringtone" />

    <ImageButton
        android:id="@+id/share"
        style="@style/blue_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="4dp"
        android:contentDescription="@string/menu_share"
        android:src="@drawable/ic_menu_share" />

</LinearLayout>